--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>6.10.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>lk.ijse.dep.crpto</groupId>
+            <artifactId>dep-crypt</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
